# HH_parser

./: .gitignore  README.md  pyproject.toml
hh_parser/: DataService.py  Db.py  VacancyModel.py  analytics.py  main.py  parser.py  selector.py
hh_parser.egg-info/: requires.txt
