[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hh-parser"
version = "1.0.0"
description = "Парсер вакансий с HH.ru и аналитика данных для ML/NLP"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Maxim", email = "londonreaper777@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# Зависимости, которые установятся автоматически
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "tqdm>=4.66.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pydantic>=2.0.0",
]

# КЛЮЧЕВОЙ МОМЕНТ: Регистрация консольной команды!
# При установке пакета в систему добавится команда "hh-parser",
# которая будет запускать функцию main() из файла hh_parser/main.py
[project.scripts]
hh-parser = "hh_parser.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hh_parser*"]
